# euroleague-insights

./: .dockerignore  .gitignore  CONTRIBUTORS.txt  Dockerfile  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  main.py  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
alembic/: env.py
alembic/versions/: 02f6727325a0_create_clubs.py
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
euroleague_insights/: conftest.py
euroleague_insights/euroleague/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
euroleague_insights/euroleague/euroleague_api/: api.py  constants.py
euroleague_insights/euroleague/migrations/: 0001_initial.py  0001_squashed_0004_delete_match_rename_code_club_club_code.py  0002_alter_club_id.py  0002_player_position.py  0003_alter_player_position.py  0003_player.py  0004_alter_player_birth_date.py  0004_rename_away_team_play_points_play_away_team_points_and_more.py  0005_alter_player_jersey_name.py  0006_match.py  (+7 more)
euroleague_insights/templates/: base.html
euroleague_insights/users/: adapters.py  apps.py  models.py  views.py
src/core/: config.py  dependencies.py
src/db/: models.py
src/euroleague/: api.py  constants.py  service.py
src/insights/: schemas.py  service.py
(+24 files in other folders)
