[project]
name = "euroleague-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.117.1",
    "httpx>=0.28.1",
    "ipython>=9.5.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "ruff>=0.13.2",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
